RESOLVED FIXED 257598
[WGSL] Global variable rewriter shouldn't record local reads
https://bugs.webkit.org/show_bug.cgi?id=257598
Summary [WGSL] Global variable rewriter shouldn't record local reads
Tadeu Zagallo
Reported 2023-06-01 02:46:33 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-01 02:46:48 PDT
Tadeu Zagallo
Comment 2 2023-06-01 02:50:40 PDT
EWS
Comment 3 2023-06-02 10:52:50 PDT
Committed 264834@main (ff223cff3048): <https://commits.webkit.org/264834@main> Reviewed commits have been landed. Closing PR #14581 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.